syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "PixGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

service RegistraChavePixService {
  rpc registra(NovaChavePixRequest) returns (NovaChavePixResponse) {}

}

service RemoveChavePixService{
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse){}
}

enum TipoChave{
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta{
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message NovaChavePixRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message NovaChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixRequest{
  string pixId=1;
  string clienteId=2;
}

message RemoveChavePixResponse{
  string pixId=1;
  string clienteId=2;
}